# claude-etl

./: README.md  chatgpt_ingest.py  chunk_conversations.py  code_ingest.py  cron-ingest.sh  embed.py  migrate_messages_vector.py  migrate_vector.py  normalize.py  process_all.py  pyproject.toml  reembed_messages.sh  reembed_messages_worker.py  reembed_topics.py  requirements.txt  web_ingest.py
claude_etl/: __init__.py  chatgpt_ingest.py  chunk_conversations.py  code_ingest.py  embed.py  migrate_messages_vector.py  migrate_vector.py  normalize.py  process_all.py  reembed_messages_worker.py  reembed_topics.py  web_ingest.py
